<resources>
    <string name="app_name">Do You Know</string>
    <string name="welcome_message">Welcome to My App!\nTest Your Knowledge</string>
    <string name="good_luck_wishes">Good Luck :-)</string>
    <string name="title_activity_scrolling">Do You Know : G.K.</string>
    <string name="question1">Q) What is the character limit for a post on twitter?</string>
    <string name="question2">Q) What was an early version of YouTube called?</string>
    <string name="question3">Q) When was Twitter launched?</string>
    <string name="question4">Q) Which service is called “the SMS of the internet”?</string>
    <string name="question5">Q) What is the minimum age to join Facebook?</string>
    <string name="question6">Q) Which is the home city of twitter?</string>
    <string name="question7">Q) Who were the 􀃚rst members of Facebook?</string>
    <string name="question8">Q) What is the maximum duration for Instagram videos?</string>
    <string name="question9">Q) What is the motto of YouTube?</string>
    <string name="question10">Q) What approximate amount was paid by Facebook to acquire WhatsApp?</string>
    <string name="question11">Q) Who is the founder of Tumblr?</string>
    <string name="question12">Q) What was the name of snapchat when it started as a prototype?</string>
    <string name="question13">Q) When was Flickr created?</string>
    <string name="question14">Q) Where is Baidu headquarters located?</string>
    <string name="question15">Q) What was google originally called?</string>
    <string name="question16">Q) In which year was Instagram acquired by Facebook?</string>
    <string name="question17">Q) What is the name of the company that google created, to do research into antiaging?</string>
    <string name="question18">Q) Which social media giant has acquired Tumblr?</string>
    <string name="question19">Q) What is the title of the 􀃚rst ever YouTube video?</string>
    <string name="question20">“Q) Some of the comments on YouTube make you weep for the future of humanity just for the spelling alone, never mind the obscenity and the naked hatred.” Which magazine gave this comment about YouTube?</string>
    <string name="question1_optionA">45</string>
    <string name="question1_optionB">145</string>
    <string name="question1_optionC">140</string>
    <string name="question2_optionA">Tune In Hook Up</string>
    <string name="question2_optionB">Share your world</string>
    <string name="question2_optionC">Universal tube</string>
    <string name="question3_optionA">March 2006</string>
    <string name="question3_optionB">July 2006</string>
    <string name="question3_optionC">June 2006</string>
    <string name="question4_optionA">Facebook Messenger</string>
    <string name="question4_optionB">Twitter</string>
    <string name="question4_optionC">Instagram</string>
    <string name="question5_optionA">18</string>
    <string name="question5_optionB">15</string>
    <string name="question5_optionC">13</string>
    <string name="question6_optionA">California</string>
    <string name="question6_optionB">New York</string>
    <string name="question6_optionC">San Francisco</string>
    <string name="question7_optionA">Ivy league</string>
    <string name="question7_optionB">Students of Stanford</string>
    <string name="question7_optionC">Students of Harvard</string>
    <string name="question8_optionA">18 seconds</string>
    <string name="question8_optionB">20 seconds</string>
    <string name="question8_optionC">15 seconds</string>
    <string name="question9_optionA">Broadcast yourself</string>
    <string name="question9_optionB">Do no evil</string>
    <string name="question9_optionC">Self-expression is a human right</string>
    <string name="question10_optionA">US$ 19.3 billion</string>
    <string name="question10_optionB">US$ 19.6 billion</string>
    <string name="question10_optionC">US$ 19.2 billion</string>
    <string name="question11_optionA">Paul Allen</string>
    <string name="question11_optionB">Steve Wozniak</string>
    <string name="question11_optionC">David Karp</string>
    <string name="question12_optionA">Picaboo</string>
    <string name="question12_optionB">Photochat</string>
    <string name="question12_optionC">Polaroid</string>
    <string name="question13_optionA">2005</string>
    <string name="question13_optionB">2004</string>
    <string name="question13_optionC">2003</string>
    <string name="question14_optionA">Shanghai</string>
    <string name="question14_optionB">Hong Kong</string>
    <string name="question14_optionC">Beijing</string>
    <string name="question15_optionA">Googol</string>
    <string name="question15_optionB">Backchat</string>
    <string name="question15_optionC">Backrub</string>
    <string name="question16_optionA">2013</string>
    <string name="question16_optionB">2012</string>
    <string name="question16_optionC">2014</string>
    <string name="question17_optionA">Exobeing</string>
    <string name="question17_optionB">Calico</string>
    <string name="question17_optionC">Cortana</string>
    <string name="question18_optionA">Google</string>
    <string name="question18_optionB">Facebook</string>
    <string name="question18_optionC">Yahoo!</string>
    <string name="question19_optionA">Hello world!</string>
    <string name="question19_optionB">You are watched</string>
    <string name="question19_optionC">Me at the zoo</string>
    <string name="question20_optionA">TIME magazine</string>
    <string name="question20_optionB">The New Yorker</string>
    <string name="question20_optionC">The Atlantic</string>
    <string name="finish">Lock The Answers</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="exit">Exit</string>
    <string name="play_again">Play Again</string>
    <string name="user_score">Your Score :</string>
</resources>
