<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.itskshitizsh.doyouknow.ResultActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mylogoquiz"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/user_score"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="48sp"
        />
    <TextView
        android:id="@+id/score_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:layout_weight="1"
            android:background="@color/background"
            android:onClick="exit"
            android:text="@string/exit"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/textSize_24sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8dp"
            android:layout_weight="1"
            android:background="@color/background"
            android:onClick="back"
            android:text="@string/play_again"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/textSize_24sp" />
        </LinearLayout>
</LinearLayout>
